<resources>
    <string name="app_name">Cassandra Omnibus Mobile</string>
    <string name="splashNotation">Cass Promotional Artwork</string>
    <string name="cass">Cassandra</string>
    <string name="omni">Omnibus</string>
    <string name="gen_info">General Info</string>
    <string name="cass_info">Cassandra Info</string>
    <string name="combo">Combos</string>
    <string name="misc">Miscellaneous</string>
    <string name="char_mu">Character Matchups</string>
    <string name="cass_profile_bg">Cass Profile BG</string>
    <string name="frame_data">Frame Data</string>
    <string name="patch_notes">Patch Notes</string>
    <string name="basic_buttons_heading">Universal Basic Buttons</string>
    <string name="basic_hori">Horizontal Attack</string>
    <string name="basic_vert">Vertical Attack</string>
    <string name="basic_kick">Kick</string>
    <string name="basic_guard">Guard</string>
    <string name="basic_properties_heading">Basic Movelist Properties</string>
    <string name="basic_high">High</string>
    <string name="basic_mid">Mid</string>
    <string name="basic_s_mid">Special Mid</string>
    <string name="basic_low">Low</string>
    <string name="basic_s_low">Special Low</string>
    <string name="basic_high_note">Can Duck or Stand Block, Can\'t jump</string>
    <string name="basic_mid_note">Must Stand Block, Hits crouching</string>
    <string name="basic_s_mid_note">Can Stand/Crouch Block, Can\'t jump</string>
    <string name="basic_low_note">Must Crouch Block, Can jump</string>
    <string name="basic_s_low_note">Can Stand/Crouch Block, Can jump</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="k_button">K</string>
    <string name="g_button">G</string>
    <string name="h">H</string>
    <string name="l">L</string>
    <string name="sm">SM</string>
    <string name="sl">SL</string>
    <string name="m">M</string>
    <string name="general_sys_terms">General System Terminology</string>
    <string name="notation_image_desc">General System Notation</string>
    <string name="_8wr">8WR</string>
    <string name="_8_way_run">8 Way Run</string>
    <string name="cass_terms">Cassandra Specific Terminology</string>
</resources>
