<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <Button
            android:id="@+id/cass_info_button"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/cass_info"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gen_info_button" />

        <Button
            android:id="@+id/combo_button"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/combo"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/char_mu_button" />

        <Button
            android:id="@+id/misc_button"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/misc"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/combo_button"/>

    <Button
        android:id="@+id/gen_info_button"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="340dp"
        android:text="@string/gen_info"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/char_mu_button"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/char_mu"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cass_info_button" />

        <ImageView
            android:id="@+id/home_bg"
            android:layout_width="445dp"
            android:layout_height="813dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@drawable/cassprofile2"
            android:contentDescription="@string/cass_profile_bg" />



</androidx.constraintlayout.widget.ConstraintLayout>