<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cass_splash"
        android:layout_width="364dp"
        android:layout_height="646dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/splashNotation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/cass_promo" />

    <TextView
        android:id="@+id/splashTextTop"
        android:layout_width="330dp"
        android:layout_height="89dp"
        android:fontFamily="@font/soul"
        android:gravity="center"
        android:text="@string/cass"
        android:textAlignment="center"
        android:textSize="76sp"
        app:layout_constraintBottom_toBottomOf="@+id/cass_splash"
        app:layout_constraintEnd_toEndOf="@+id/cass_splash"
        app:layout_constraintStart_toStartOf="@+id/cass_splash"
        app:layout_constraintTop_toTopOf="@+id/cass_splash"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/splashTextBottom"
        android:layout_width="323dp"
        android:layout_height="91dp"
        android:fontFamily="@font/soul"
        android:gravity="center"
        android:text="@string/omni"
        android:textSize="76sp"
        app:layout_constraintBottom_toBottomOf="@+id/cass_splash"
        app:layout_constraintEnd_toEndOf="@+id/cass_splash"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/cass_splash"
        app:layout_constraintTop_toBottomOf="@+id/splashTextTop"
        app:layout_constraintVertical_bias="0.985" />

</androidx.constraintlayout.widget.ConstraintLayout>
